<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/bem_vindo_ao_if_helptech"
        android:textColor="@color/blacklight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/quicksand"
        android:text="@string/entre_com_sua_conta_ou_crie_uma_nova_para_acessar_o_f_rum"
        android:textColor="@color/blacklight"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/acessar_conta"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="60dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/criar_nova_conta"
        android:textAllCaps="false"
        android:textSize="20sp" />
</LinearLayout>
